    image parameters
  - define Imager output type for trivial cases of returning an i_img as
    a full Imager object
  - Inline WITH hook to filter Imager XS types into types Inline::C can
    accept, supply appropriate headers and initialization.
  - test script t/t82inline.t
- try to use XSLoader instead of DynaLoader (but fallback if necessary)
- paste() can now paste a subset of the source image.
- paste() now has better tests
- paste() should now be faster for larger pastes
- added sample files missing from MANIFEST
- added t/t92samples.t to check samples/README against MANIFEST
- added inline_replace_color.pl to samples
- constify the Imager API
- document Imager::Filter::Mandelbrot
- convert dynfilt/flines.c to Imager::Filter::Flines
- minor changes for older perl/ExtUtils::MM
- deal with freetype-config --cflags returning the directories
  in the wrong order (Freetype 2.1.4 and earlier)
  Thanks to David Wheeler for his help in tracking this down.
- reword and provide an example for non-proportionally scaling an
  image.  Wording from Simon Cozens.
- error messages when writing TIFF images were always 
  'Could not write to buffer', more useful messages are now reported.
- error messages when writing PNM images were always
  'unable to write pnm image', more useful messages are now reported.
- convert t/t103raw.t to Test::More
- reading a raw image no longer exits on a short read or read error,
  and returns an appropriate error message in $im->errstr
- write failures when writing a raw image now return a useful
  message in $im->errstr
- added typemap type names to types in Imager::API.
- make skip when Inline::C not available less verbose
- convert t/t07iolayer.t to Test::More

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
